[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "index-images"
dynamic = ["version"]
description = 'Command-line utility scans a directory for image files and creates a HTML index of found images.'
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [ "image index", "html", "documentation tool" ]
authors = [
  { name = "Bill Melvin", email = "bill@billmelvin.com" },
]
dependencies = []

[project.scripts]
index_images = "index_images:main"

[tool.setuptools.dynamic]
version = {attr = "index_images.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["index_images*"]
exclude = ["test*", "readme_images"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
ignore = ["ISC001"]
# extend-select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",    # assert
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
